- fix: check in now does not skip the date is its today - check in button will not be shown if the user has already checked in - WFH label is added to the schedule for all shifts marked as WFH

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -29,6 +29,10 @@ body{
     display: unset;
 }
 
+.checkInBtn{
+    margin-top: 0.5rem;
+}
+
 /* TODO: Phone view navbar */
 @media screen and (max-width: 460px) {
 
